gitops/infrastructure/argocd/argocd-platform-deployment.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: placeholder
spec:
  template:
    spec:
      nodeSelector:
        node-restriction.kubernetes.io/argocd-platform: "true"

      tolerations:
        - key: node-role.kubernetes.io/control-plane
          operator: Exists
          effect: NoSchedule

      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: node-restriction.kubernetes.io/always-on
                    operator: In
                    values:
                      - "true"
