gitops/infrastructure/argocd/argocd-redis-ha-server.patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: argocd-redis-ha-server
spec:
  template:
    spec:
      nodeSelector:
        node-restriction.kubernetes.io/argocd-platform: "true"
      tolerations:
        - key: node-role.kubernetes.io/control-plane
          operator: Exists
          effect: NoSchedule
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: node-restriction.kubernetes.io/always-on
                    operator: In
                    values:
                      - "true"
