gitops/infrastructure/argocd/argocd-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: argocd

spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: local-cluster-gateway
      namespace: networking
      sectionName: websecure

  hostnames:
    - argocd.home

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: argocd-server
          port: 80
          weight: 1
